Change banner button link to external URL
Updated the banner link to direct to an external page.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
                 <div class="col-2">
                     <h1>Tempero certo<br>para cada momento</h1>
-                    <br><a href="#" class="btn">Mais Informações</a>
+                    <br><a href="https://w.app/nephqz" class="btn" target="_blank" rel="noopener">Mais Informações</a>
                 </div>
 
               
@@ -208,5 +208,6 @@
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"> </script>
     <script src="assets/js/app.js"></script>
 </body>
+
 
 </html>
