--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
             <div class="col-4">
                 <img src="assets/img/canela.png" alt="">
                 <h4>Canela em Pó</h4>
+                <p>Ingredientes: cebola, alho, cenoura, salsa, pimentão vermelho, cebolinha</p>
+
             </div>
 
             <!--FIM ITEM PRODUTOS EM DESTAQUE SITE-->
