--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
             <div class="col-4">
                 <img src="assets/img/açafrao.png" alt="">
                 <h4>Açafrão</h4>
+                <p> Ingredientes: Açafrão da terra e amido de milho enriquecido com ferro e ácido fólico.</p>
+
             </div>
             <!--FIM ITEM PRODUTOS EM DESTAQUE SITE-->
 
@@ -120,6 +122,8 @@
             <div class="col-4">
                 <img src="assets/img/pimentadoreino.png" alt="">
                 <h4>Pimenta do Reino Preta Moída</h4>
+                <p> Ingredientes: Pimenta do reino preta moída.</p>
+
             </div>
 
             <!--FIM ITEM PRODUTOS EM DESTAQUE SITE-->
@@ -128,7 +132,8 @@
             <div class="col-4">
                 <img src="assets/img/chimichurri.png" alt="">
                 <h4>Chimichurri</h4>
-            </div>
+                <p>Ingredientes: Manjericão, orégano, tomilho, alecrim, salsa, alho, cebola, tomate, louro triturado.</p>
+           </div>
             <!--FIM ITEM PRODUTOS EM DESTAQUE SITE-->
 
         </div>
@@ -144,6 +149,8 @@
             <div class="col-4">
                 <img src="assets/img/louro.png" alt="">
                 <h4>Louro em Folhas</h4>
+                <p> Ingredientes: Louro em Folhas.</p>
+
             </div>
 
             <!--FIM ITEM NOVOS PRODUTOS-->
@@ -152,6 +159,7 @@
             <div class="col-4">
                 <img src="assets/img/açafrao.png" alt="">
                 <h4>Açafrão</h4>
+                <p> Ingredientes: Açafrão da terra e amido de milho enriquecido com ferro e ácido fólico.</p>
             </div>
             <!--FIM ITEM NOVOS PRODUTOS-->
 
@@ -159,6 +167,7 @@
             <div class="col-4">
                 <img src="assets/img/camomila.jpeg" alt="">
                 <h4>Camomila</h4>
+                <p> Ingredientes: Camomila.</p>
             </div>
 
             <!--FIM ITEM NOVOS PRODUTOS-->
@@ -167,6 +176,7 @@
             <div class="col-4">
                 <img src="assets/img/CanelaEmCasca.jpeg" alt="">
                 <h4>Canela em Casca</h4>
+                <p> Ingredientes: Canela em Casca.</p>
             </div>
             <!--FIM ITEM NOVOS PRODUTOS-->
 
@@ -174,6 +184,7 @@
             <div class="col-4">
                 <img src="assets/img/canela.png" alt="">
                 <h4>Canela em Pó</h4>
+                <p> Ingredientes: Canela em Pó.</p>
             </div>
             <!--FIM ITEM NOVOS PRODUTOS-->
 
@@ -181,6 +192,7 @@
             <div class="col-4">
                 <img src="assets/img/chimichurri.png" alt="">
                 <h4>Chimichurri</h4>
+                <p>Ingredientes: Manjericão, orégano, tomilho, alecrim, salsa, alho, cebola, tomate, louro triturado.</p>
             </div>
             <!--FIM ITEM NOVOS PRODUTOS-->
 
@@ -188,6 +200,7 @@
             <div class="col-4">
                 <img src="assets/img/cominho.png" alt="">
                 <h4>Cominho em Pó</h4>
+                <p>Ingredientes: Cominho em Pó</p>
             </div>
             <!--FIM ITEM NOVOS PRODUTOS-->
 
@@ -195,7 +208,7 @@
             <div class="col-4">
                 <img src="assets/img/louro.png" alt="">
                 <h4>Louro em Folhas</h4>
-            </div>
+                <p> Ingredientes: Louro em Folhas.</p>
             <!--FIM ITEM NOVOS PRODUTOS-->
 
         </div>
